# Labs_OOP_4

./: CMakeLists.txt
include/: Array.h  Figure.h  Point.h  Rectangle.h  Rhombus.h  Square.h  Trapezoid.h
src/: Figure.cpp  Rectangle.cpp  Rhombus.cpp  Trapezoid.cpp  main.cpp
tests/: tests.cpp
